# gig-tracker

./: .envrc  .envrc.example  .gitignore  .mise.toml  Dockerfile  README.md  app.py  ploomber-cloud.json  pyproject.toml  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: CI.yml  ploomber-cloud.yml
gig-tracker/ui/pages/: __init__.py
gigtracker/: app.py  security.py  ui_routes.py
gigtracker/routes/: client_routes.py  gig_routes.py  ui_routes.py  user_routes.py  venue_routes.py
gigtracker/schema/: base.py  client.py  gig.py  user.py  venue.py
gigtracker/scripting_for_testers/: 01_03_authentication.py  01_04_intermittent_error.py  01_06_solution_rate_limit_api.py  01_07_generate_fake_input_data_final.py  01_07_generate_fake_input_data_initial.py  01_08.py  01_09_final.py  01_09_initial.py  02_01.py  02_02.py  02_02_final.py  02_02_initial.py  02_03_final.py  02_04_final.py  02_06_final.py  02_06_initial.py  03_01_final.py  03_01_initial.py  03_02_final.py  03_02_seed_data.py  03_03_final_playwright.py  03_03_final_requests.py  03_03_initial.py  03_04_final.py  03_04_initial.py  03_06_solution.py  03_06_solution_initial.py  04_01.py  04_02_final.py  04_03_final.py  04_04_final.py  04_04_initial.py
gigtracker/static/css/: main.css
gigtracker/templates/: base.html  clients.html  gigs.html  index.html  search.html  venue.html
gigtracker/templates/shared/: _nav.html
gigtracker/templates/snippets/: clients_as_options.html  gig_results.html  venue_as_options.html
gigtracker/ui/pages/: __init__.py
