[tool.poetry]
name = "gigtracker"
version = "0.1.0"
description = ""
authors = ["Dave Westerveld <davewesterveld@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
solara = "^1.41.0"
ploomber-cloud = "^0.3.2"
fastapi = "^0.115.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
mypy = "^1.13.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"